[metadata]
name = mumot
description = Multiscale Modelling Tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DiODeProject/MuMoT
author = James A. R. Marshall, Andreagiovanni Reina, Thomas Bose
author_email = james.marshall@shef.ac.uk
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    use_scm_version=True,
    setup_requires=['setuptools_scm'],

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    antlr4-python3-runtime >=4.7,<4.8
    graphviz
    setuptools  # used with Python <3.8 for finding pkg version at runtime (with 3.8 could use importlib.metadata)
    ipykernel <4.7  # needed so no duplicate figures when wiggle ipywidgets
    ipython
    ipywidgets
    matplotlib
    networkx
    notebook <5.5  # needed if using pyzmq < 17
    pydstool >=0.90.3  # min version that allows scipy >= 1.0.0 to be used
    pyzmq <17  # needed if using tornado < 5
    scipy
    sympy >=1.4,<1.5  # pinned to <1.5 due to Issue #377
    tornado <5  # needed to avoid errors with older ipykernel
setup_requres = 
    setuptools_scm

[options.extras_require]
test =
    pytest
    pytest-cov
    nbval
    nbdime
    jupyter
docs =
    sphinx
